Bug #71769 Bug #71765 Bug #71771 - Update spacing, remove green checkout box, fix cart checkout label, work on single button for changing the payment.

--- a/stylesheets/pages/checkout.less
+++ b/stylesheets/pages/checkout.less
@@ -22,7 +22,6 @@
 
 .mz-checkoutform-active {
     background-color: #eeeeee;
-    width: 95%;
 }
 
 .mz-checkoutform {
